fixed a styling problem with titleBar not showing

--- a/src/javascript/components/TitleBar/TitleBar.scss
+++ b/src/javascript/components/TitleBar/TitleBar.scss
@@ -1,5 +1,5 @@
 .titleBar {
-    display: flex;
+    display: table-row;
     height: 30px;
     min-width: 100%;
     -webkit-app-region: drag;
